test/types/records/const-checking/tuples-and-records.good
tuples-and-records.chpl:25: In function 'main':
tuples-and-records.chpl:26: error: illegal lvalue in assignment
tuples-and-records.chpl:27: error: illegal lvalue in assignment
tuples-and-records.chpl:31: error: illegal lvalue in assignment
tuples-and-records.chpl:32: error: illegal lvalue in assignment
tuples-and-records.chpl:33: error: illegal lvalue in assignment
tuples-and-records.chpl:34: error: illegal lvalue in assignment
tuples-and-records.chpl:35: error: illegal lvalue in assignment
tuples-and-records.chpl:36: error: illegal lvalue in assignment
tuples-and-records.chpl:37: error: illegal lvalue in assignment
tuples-and-records.chpl:38: error: illegal lvalue in assignment
tuples-and-records.chpl:39: error: illegal lvalue in assignment
